# Master-of-Disaster

./: README.md  data_handler.py  main.py  pyproject.toml  scraper.patch  scraper.py
data/: 113年臺北市防空疏散避難設施資料集Q1_1130501.csv  4325ac68-9ee1-43a3-97ad-c9d9ea6fdf60.csv
misc/: __init__.py  language_table.py
