[tool.poetry]
name = "master-of-disaster"
version = "0.1.0"
description = ""
authors = ["Ula Wang <lilingwang32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"
flask = "^3.0.3"
line-bot-sdk = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
